network-policy/busybox_pod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: busybox-ns
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  namespace: busybox-ns
spec:
  containers:
  - image: busybox
    name: busybox
    command: [ "/bin/sh", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
  restartPolicy: Never
