network-policy/default_ns_busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: default-ns-busybox
spec:
  containers:
  - image: busybox
    name: default-ns-busybox
    command: [ "/bin/sh", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
  restartPolicy: Never
