network-policy/nginx_deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-deploy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-deploy
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx-deploy
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
