network-policy/default_deny_network_policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: nginx-deploy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
